# port-barcelona-survival-analysis

./: .gitignore  README.md  pyproject.toml
src/: build_survival_dataset.py  extract_ckan.py
