[project]
name = "port-barcelona-survival-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "polars>=1.37.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
    "ruff>=0.14.11",
]

[tool.poe.tasks]
extract = "python src/extract_ckan.py -v"
build   = "python src/build_survival_dataset.py"
lint    = "ruff check ."
format  = "ruff format ."